--- a/neurodecode_protocols/protocol_configs/default/online.yml
+++ b/neurodecode_protocols/protocol_configs/default/online.yml
@@ -2,11 +2,19 @@ buffer_size: 2                     # Stream buffer [sec]
 window_size: 2                     # window length of acquired data when calling get_window [sec]
 timer_sleep: 0.6                   # in seconds
 global_time: 300
-njobs: 4                           # For multicore PSD processing
+n_jobs: 4                           # For multicore PSD processing
 
 sampling_frequency: 300
 
 _root_music_path_: '/home/sam/proj/epfl/eeg-meditation-project/nfme/meditation_sounds'
+
+trigger_device: 'SOFTWARE'
+trigger_file: '/home/sam/proj/epfl/eeg-meditation-project/NeuroDecode/triggers/triggerdef_16.ini'
+
+start_voice_file: '{_root_music_path_}/arnaud/startRecordingVoice.mp3'
+end_voice_file: '{_root_music_path_}/arnaud/EndRecordingVoice.mp3'
+screen_size: [1920, 1200]
+screen_pos: [0,0]
 
 spatial_channels: ['Fz', 'F3', 'F4', 'F7', 'F8', 'Cz', 'C3', 'C4', 'P3', 'Pz', 'P4']
 alpha_channels: ['Fz', 'Cz', 'F3', 'F4', 'Fp1', 'Fp2']
